...
    const component = useMemo(
        () => (
            <>
                <StatusBar barStyle="dark-content" />
                <SafeAreaView>
                    <ScrollView
                        testID="sidemenu"
                        accessibilityLabel="sidemenu"
                        contentInsetAdjustmentBehavior="automatic"
                        style={styles.scrollView}>
                        <Markdown styles={markdownStyles} testID={'sideBarMenuContent'}>
                            {markdown.sidemenu}
                        </Markdown>
                        <Button style={{ marginTop: 50 }} onPress={getAnswer} testID={'sidemenuButton'}>
                            Get the ultimate answer
                        </Button>
                        {counter > 0 && (
                            <Text
                                style={[
                                    markdownStyles.heading3,
...
